--- a/docs/content/2.storybook/1.config.md
+++ b/docs/content/2.storybook/1.config.md
@@ -5,7 +5,7 @@ This module comes with a default Storybook configuration file to provide the bes
 ## Default configuration
 
 ```ts [main.ts]
-import type { StorybookConfig } from '@storybook-vue/nuxt'
+import type { StorybookConfig } from '@tian-zhihui/storybook-vue-nuxt'
 
 const config: StorybookConfig = {
   stories: [
@@ -18,7 +18,7 @@ const config: StorybookConfig = {
     '@storybook/addon-interactions',
   ],
   framework: {
-    name: '@storybook-vue/nuxt',
+    name: '@tian-zhihui/storybook-vue-nuxt',
     options: {},
   },
   docs: {
